# pre-commit-terraform

./: .codecov.yml  .coderabbit.yaml  .container-structure-test-config.yaml  .coveragerc  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .git_archival.txt  .gitignore  .hadolint.yaml  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.alpine  Dockerfile.old  Dockerfile.tools  LICENSE  README.md  _common.sh  docker-tests.yaml  h  hatch.toml  hooks.yaml  infracost_breakdown.sh  lib_getopt  lib_tfenv  outputs.tf  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  terrafmt.sh  terraform_checkov.sh  terraform_docs.sh  (+13 more)
.chglog/: config.yml
.github/: .container-structure-test-config.yaml  .dive-ci.yaml  AI_POLICY.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  renovate.json5  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report_docker.md  bug_report_local_install--.md  bug_report_local_install.md  feature_request.md
.github/workflows/: build-image-test.yaml  build-image.yaml  ci-cd.yml  codeql.yml  dependency-review.yml  e2e-tests.yaml  pr-title.yml  pre-commit.yaml  release.yml  reusable-tox.yml  scheduled-runs.yml  scorecards.yml  stale-actions.yaml  trivy.yaml
dependencies/lock-files/: dist-build-constraints.txt
docker-scripts/: echo-versions.sh  handle_architecture.sh  handle_install-all.sh  install-from-github.sh  install_checkov.sh  install_infracost.sh  install_pre-commit.sh  install_terraform-docs.sh  install_terraform.sh  install_terragrunt.sh  install_terrascan.sh  install_tflint.sh  install_tfsec.sh  populate-env-arch.sh  populate-env-versions.sh  write_tools-versions-info.sh
examples/: .pre-commit-config-docker.yaml
hooks/: __init__.py  _common.sh  checkov.sh  common.py  infracost_breakdown.sh  logger.py  terraform_checkov.py  terraform_checkov.sh  terraform_docs.sh  terraform_docs_replace.py  terraform_fmt.py  terraform_fmt.sh  terraform_graph.sh  terraform_provider_version_consistency.sh  terraform_providers_lock.sh  terraform_test.sh  terraform_tflint.sh  terraform_tfsec.sh  terraform_trivy.sh  terraform_validate.sh  terraform_wrapper_module_for_each.sh  terragrunt_fmt.sh  terragrunt_providers_lock.sh  terragrunt_test.sh  terragrunt_validate.sh  terragrunt_validate_inputs.sh  terrascan.sh  test_common.py  test_terraform_checkov.py  test_terraform_fmt.py  tfupdate.sh  tofu_checkov.sh  tofu_docs.sh  tofu_validate.sh
pre_commit_hooks/: terraform_docs_by_required.py  terraform_docs_replace.py
src/pre_commit_terraform/: README.md  __main__.py  _cli.py  _cli_parsing.py  _cli_subcommands.py  _common.py  _errors.py  _logger.py  _run_on_whole_repo.py  _structs.py  _types.py  common.py  terraform_checkov.py  terraform_docs_replace.py  terraform_fmt.py
tests/: Dockerfile  bach.sh  hooks_performance_test.sh
tests/e2e/: README.md  run_e2e_tests.sh
tests/pytest/: _cli_test.py  terraform_docs_replace_test.py  test___main__.py  test__cli.py  test__cli_parsing.py  test__cli_subcommands.py  test__common.py  test__errors.py  test__run_on_whole_repo.py  test__structs.py  test__types.py  test_cli_subcommands.py  test_common.py  test_run_on_whole_repo.py  test_terraform_checkov.py  test_terraform_fmt.py
tests/shunit2/: _common_test.sh
tests/unit-tests/: _common.sh
tools/: entrypoint.sh
tools/install/: _common.sh  checkov.sh  hcledit.sh  infracost.sh  opentofu.sh  pre-commit.sh  terraform-docs.sh  terraform.sh  (+6 more)
(+13 files in other folders)
