[build-system]
requires = [
  'hatchling',
  'hatch-vcs',  # setuptools-scm
]
build-backend = 'hatchling.build'

[project]
name = 'pre-commit-terraform'
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 2',
  'Programming Language :: Python :: 2.7',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
description = 'Pre-commit hooks for terraform_docs_replace'
dependencies = []
dynamic = [
  'urls',
  'version',
]

[[project.authors]]
name = 'Anton Babenko'
email = 'anton@antonbabenko.com'

[[project.authors]]
name = 'Contributors'

[[project.maintainers]]
name = 'Maksym Vlasov'

[[project.maintainers]]
name = 'George L. Yermulnik'
email = 'yz@yz.kiev.ua'

[project.readme]
file = 'README.md'
content-type = 'text/markdown'

[project.scripts]
terraform_docs_replace = 'pre_commit_terraform.terraform_docs_replace:main'
